# ModernOpenCL

./: README.md
codes/hybrid/01/: CMakeLists.txt  Info.cu  Info.h  main.cpp
codes/info/01/: main.cpp
codes/info/02/: CMakeLists.txt  main.cpp
codes/info/03/: main.cpp
codes/info/04/: main.cpp
codes/info/04aaaa/: main.cpp
codes/simple/01/: CMakeLists.txt  main.cpp
